<resources>
    <string name="app_name">TingShu</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_title">第二回 史大郎夜走华阴县　鲁提辖拳打镇关西</string>

    <string name="icon_music">{fa-music 40sp}</string>
    <string name="player_play">{fa-play-circle-o 40sp}</string>
    <string name="player_pause">{fa-pause-circle-o 40sp}</string>
    <string name="player_next">{fa-step-forward 20sp}</string>
    <string name="player_previous">{fa-step-backward 20sp}</string>
    <string name="player_list">{fa-list 20sp}</string>
    <string name="player_auto_stop">{fa-clock-o 20sp}</string>

</resources>
